upgrade to spark 3.2.1